[project]
authors = [{ name = "Radu Grosu", email = "radu.grosu@gmail.com" }]
dependencies = [
  "ale-py>=0.10.2",
  "click>=8.1.8",
  "gymnasium[all,atari]>=1.1.1",
  "ipython>=9.0.2",
  "jaxtyping>=0.3.0",
  "jupyter>=1.1.1",
  "loguru>=0.7.3",
  "matplotlib>=3.10.1",
  "numpy>=2.2.4",
  "opencv-python>=4.11.0.86",
  "polars>=1.26.0",
  "pytorch-ignite>=0.5.1",
  "stable-baselines3>=2.6.0",
  "standard-imghdr>=3.13.0",
  "tensorboard>=2.19.0",
  "tensorboardx>=2.6.2.2",
  "torch>=2.6.0",
  "torchinfo>=1.8.0",
  "torchvision>=0.21.0",
  "tqdm>=4.67.1",
  "typer>=0.15.2",
]
description = "Update of Deep RL Hans On by Max Lapan"
name = "deeprl"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[tool.ruff]
ignore = ["F722"] # Disables syntax errors for string annotations

# [build-system]
# build-backend = "hatchling.build"
# requires = ["hatchling"]

# [tool.hatch.build.targets.wheel]
# packages = ["src"]
